--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "advent-of-code-2024",
+  "name": "advent-of-code",
   "version": "1.0.0",
-  "main": "day_1.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
